<resources>
    <string name="app_name">Speed Analyzer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_analyzing">Start Analyzing</string>
    <string name="stop_analysing">Stop Analyzing</string>
    <string name="label_location">Getting Location</string>
    <string name="hint">Hint</string>
    <string name="setting">Settings</string>
    <string name="instant_speed">Instantaneous Speed</string>
    <string name="hint_text">This app detects user\'s location. The accuracy depends on if the app can get wifi access closeby and if there is network coverage.0</string>
    <string name="distance_text"> %1$s %2$s</string>
    <string name="instant_speed_text"> %1$s %2$s</string>
    <string name="distance_text_null">Covered:  </string>
    <string name="time_text_null">Elapsed:  </string>
    <string name="instant_speed_text_null">Instant Speed:  </string>
    <string name="meter_per_second">m/s</string>
    <string name="kilometer_per_hour">km/hr</string>
    <string name="pref_distance_unit_label">Distance</string>
    <string name="pref_speed_unit_label">Speed</string>
    <string name="pref_distance_unit_key">distance</string>
    <string name="pref_speed_unit_key">speed</string>
    <string name="pref_distance_meters">meters</string>
    <string name="pref_distance_kilometers">kilometers</string>
    <string name="pref_speed_meters">m/s</string>
    <string name="pref_speed_kilometers">km/hr</string>
    <string name="meters">m</string>
    <string name="zero">0.00</string>
    <string name="zero_time">00:00:00 s</string>
    <string name="kilometer">km</string>
    <string name="pref_speed_unit_default">m/s</string>
    <string name="pref_distance_unit_default">m</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="analysis_text">Analysis will be displayed here</string>
    <string name="dash">........</string>
</resources>
