<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lilkaydeee.speedanalyzer.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/startButton"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/holo_green_dark"
            android:text="@string/start_analyzing" />

        <Button
            android:id="@+id/stopButton"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/stop_analysing"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonLayout"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:gravity="top|center|center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/gui_padding"
        android:paddingBottom="8dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/distance_text_null"
                android:textColor="@android:color/black"
                android:textSize="@dimen/analysis_text" />

            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="top|center|center_horizontal"
                android:inputType="time|text"
                android:lines="1"
                android:textSize="@dimen/gui_text"
                android:layout_weight="0.8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/time_text_null"
                android:textColor="@android:color/black"
                android:textSize="@dimen/analysis_text" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="top|center|center_horizontal"
                android:inputType="time|text"
                android:lines="1"
                android:textSize="@dimen/gui_text"
                android:layout_weight="0.8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/instant_speed_text_null"
                android:textColor="@android:color/black"
                android:textSize="@dimen/analysis_text" />

            <TextView
                android:id="@+id/speedTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="top|center|center_horizontal"
                android:inputType="time|text"
                android:lines="1"
                android:textSize="@dimen/gui_text"
                android:layout_weight="0.8" />

        </LinearLayout>

        <TextView
            android:id="@+id/analysisTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            android:gravity="center_vertical|start"
            android:padding="4dp"
            android:text="@string/analysis_text"
            android:textSize="@dimen/analysis_text" />
    </LinearLayout>

</RelativeLayout>